# synthetic-reasoning-forge

./: .coverage  .gitignore  ARCHITECTURE.md  CLAUDE.md  LEAN_BRIDGE_ARCHITECTURE.md  LICENSE  Makefile  README.md  SPRINT_PLAN.md  STATUS.md  pyproject.toml
data/: README.md
docs/: REFERENCES.md
examples/: README.md  validate_plotting.py
lean/: ForgeLogic.lean  README.md  lake-manifest.json  lakefile.toml
lean/ForgeLogic/: Decay.lean  VerifyDecay.lean
lean/lean_learning/: LeanBasics.lean  README.md  lake-manifest.json  lakefile.toml
lean/lean_learning/LeanBasics/: PicardExample.lean
src/logic/: __init__.py  exceptions.py  logger.py  plotting.py  protocols.py  solver.py
src/logic/lean_bridge/: __init__.py  client.py  exceptions.py  serializer.py  symbolic.py
src/logic/plotting/: __init__.py  base.py  config.py  factory.py  plotters.py
src/logic/systems/: __init__.py  blow_up_system.py  decay.py  lorenz.py  pendulum.py
tests/: __init__.py  conftest.py  test_solver.py
tests/integration/: test_lean_bridge.py  test_lean_bridge_error.py
tests/unit/: test_exceptions.py  test_lean_bridge_symbolic.py  test_logger.py  test_plotting_api.py  test_plotting_config.py  test_plotting_factory.py  test_plotting_plotters.py  test_solver.py  test_systems.py
