[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reasoning-forge"
version = "0.1.0"
description = "Bridging mathematical intuition with formal verification"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Racheal Cooper", email = "rlcoop2420@gmail.com"}
]
keywords = [
    "lean4",
    "theorem-proving",
    "ode-solver",
    "formal-verification",
    "applied-mathematics",
    "systems-biology",
    "mathematical-biology",
    "control-theory",
    "dynamical-systems",
    "mathlib4",
    "formal-methods",
    "proof-assistant",
    "homeostasis",
    "stability-theory",
    "biomathematics",
    "computational-biology",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Education :: Computer Aided Instruction (CAI)",
]
dependencies = [
    "numpy>=1.24,<3.0",
    "scipy>=1.11,<2.0",
    "matplotlib>=3.8,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "black>=24.0,<25.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
